--- a/src/components/UI/Logo/Logo.module.css
+++ b/src/components/UI/Logo/Logo.module.css
@@ -13,7 +13,7 @@ body {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  font-size: 10vw;
+  font-size: 7rem;
   font-family: "Source Sans Pro", sans-serif;
   -webkit-animation: reveal 3000ms ease-in-out forwards 200ms,
     glow 2500ms linear infinite 2000ms;
