--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+:root,
+body {
+  color: #fff;
+  height: 100%;
+  background: #333641;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
