loading spinner added in multiple requests

--- a/src/styles/Forms.module.css
+++ b/src/styles/Forms.module.css
@@ -1,7 +1,7 @@
 .form__container {
   width: 100%;
   max-width: 30rem;
-  margin: inherit auto;
+  margin-inline: auto;
   background-color: #3a3e4b;
 }
 
