quote delete button

--- a/src/pages/Quote Details/QuoteDetails.module.css
+++ b/src/pages/Quote Details/QuoteDetails.module.css
@@ -30,11 +30,11 @@
   font-weight: 300;
 }
 
-.quote-details__fav-btn {
+.quote-details__btn {
   color: white !important;
   padding-inline: 1rem !important;
 }
 
-.quote-details__fav-btn span {
+.quote-details__btn span {
   margin-left: 0.5rem;
 }
