author profile button in quote details

--- a/src/pages/Quote Details/QuoteDetails.module.css
+++ b/src/pages/Quote Details/QuoteDetails.module.css
@@ -38,3 +38,10 @@
 .quote-details__btn span {
   margin-left: 0.5rem;
 }
+
+.quote-details__author {
+  font-weight: 200;
+  margin: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
