--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -10,6 +10,10 @@
   margin: 2rem auto;
 }
 
+.navbar__links li {
+  margin: 0.5rem;
+}
+
 .navbar__link {
   text-decoration: none;
   color: #eee;
@@ -18,4 +22,10 @@
 
 .navbar__link span {
   margin-left: 0.5rem;
+}
+
+@media (max-width: 30rem) {
+  .navbar__links {
+    flex-direction: column;
+  }
 }
